# sigaa-api

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  README.rst  dev.env  docker-compose.yml  keyfile.json  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: google-cloudrun-docker.yml
app/: main.py  utils.py
app/core/: config.py  exceptions.py
app/router/api_v1/: endpoints.py
app/sigaa/: api.py  core.py  examples.py  schemas.py
app/sigaa/course/: portal_courses.py
app/sigaa/login/: portal_login.py
app/sigaa/profile/: portal_profile.py
docs/: conf.py  index.rst
sigaa_api/: http.py  main.py  utils.py
sigaa_api/core/: config.py  exceptions.py
sigaa_api/router/v1/: student_endpoints.py
sigaa_api/sigaa/: examples.py  models.py  portal.py  schemas.py
sigaa_api/sigaa/course/: portal_courses.py
sigaa_api/sigaa/login/: portal_login.py
sigaa_api/sigaa/profile/: portal_profile.py
src/: __init__.py  settings.py
src/core/: exceptions.py
src/core/login/: config.py  login_model.py  portal_login.py
src/core/portal/: classes.py  homepage.py
src/sigaa_api/: debug.py  skeleton.py
src/sigaa_api/core/login/: login_model.py  portal_login.py
src/sigaa_api/core/portal/: classes.py  homepage.py
src/sigaa_api/models/: __init__.py  exceptions.py  portal.py
src/sigaa_api/models/modules/: classes.py  profile.py
src/sigaa_api/utils/: aux_functions.py  http_client.py  playwright_utils.py
tests/: conftest.py  test_skeleton.py
(+2 files in other folders)
