[tool.poetry]
name = "sigaa-api"
version = "0.1.0"
description = "An API to access SIGAA through HTTP Requests."
authors = ["rapha-pereira <raphaelpgomes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.20"
requests = "^2.31.0"
pydantic = "^2.6.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
