[project]
name = "sigaa-api"
version = "0.1.0"
description = "An API to access SIGAA through HTTP Requests."
authors = [{ name = "rapha-pereira", email = "raphaelpgomes1@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "selectolax>=0.3.20,<0.4",
    "requests>=2.31.0,<3",
    "pydantic>=2.6.2,<3",
    "fastapi>=0.110.0,<0.111",
    "uvicorn[standard]>=0.27.1,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
